--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "antd": "^4.24.0",
+    "axios": "^1.1.3",
     "express": "^4.18.2",
     "mysql2": "^2.3.3",
     "react": "^18.2.0",
