--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.0.8",
     "antd": "^4.24.0",
     "axios": "^1.1.3",
+    "echarts": "^5.4.0",
     "express": "^4.18.2",
     "mysql2": "^2.3.3",
     "react": "^18.2.0",
