--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "axios": "^1.1.3",
     "echarts": "^5.4.0",
     "express": "^4.18.2",
+    "mobx": "^6.6.1",
+    "mobx-react-lite": "^3.4.0",
     "mysql2": "^2.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-router-dom": "^6.3.0",
     "sass": "^1.53.0",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
